--- a/SL/CNN/mnist/mnist-eager-class.ipynb
+++ b/SL/CNN/mnist/mnist-eager-class.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -43,9 +43,26 @@
    "source": [
     "from __future__ import absolute_import, division, print_function\n",
     "import tensorflow as tf\n",
-    "# import tensorflow.contrib.eager as tfe\n",
-    "# tf.enable_eager_execution()\n",
+    "from tensorflow.keras import Model \n",
+    "from tensorflow.keras.layers import Conv2D, Flatten, Dense\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tf.__version__=='2.0.0-alpha0')"
    ]
   },
   {
@@ -94,11 +111,11 @@
     "class Mnist(tf.keras.Sequential):\n",
     "    def __init__(self):\n",
     "        super(Mnist, self).__init__()\n",
-    "        self.conv1 = layers.Conv2D(16,[3,3], activation='relu')\n",
-    "        self.conv2 = layers.Conv2D(16,[3,3], activation='relu')\n",
-    "        self.conv3 = layers.Conv2D(16,[3,3], activation='relu')\n",
-    "        self.flat = layers.Flatten()\n",
-    "        self.dense = layers.Dense(10, activation='softmax')\n",
+    "        self.conv1 = Conv2D(16,[3,3], activation='relu')\n",
+    "        self.conv2 = Conv2D(16,[3,3], activation='relu')\n",
+    "        self.conv3 = Conv2D(16,[3,3], activation='relu')\n",
+    "        self.flat  = Flatten()\n",
+    "        self.dense = Dense(10, activation='softmax')\n",
     "    \n",
     "    def __call__(self, x):\n",
     "        x = self.conv1(x)\n",
