--- a/SL/CNN/mnist/mnist-with-batchnormalize-eager-class-tf2_basic.ipynb
+++ b/SL/CNN/mnist/mnist-with-batchnormalize-eager-class-tf2_basic.ipynb
@@ -44,7 +44,7 @@
     "from tensorflow.keras.layers import Conv2D \n",
     "from tensorflow.keras.layers import BatchNormalization, Flatten, Dense\n",
     "import numpy as np\n",
-    "tf.enable_eager_execution()\n",
+    "# tf.enable_eager_execution()\n",
     "print(tf.__version__)"
    ]
   },
@@ -120,7 +120,7 @@
     "        self.bn3 = BatchNormalization()\n",
     "        self.flat = Flatten()\n",
     "        self.dense =  Dense(10, activation=\"softmax\")\n",
-    "\n",
+    "    \n",
     "    @tf.function\n",
     "    def call(self, x):\n",
     "        x = self.conv1(x)\n",
@@ -253,18 +253,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0, loss:0.1379, acc:95.8833\n",
-      "epoch: 1, loss:0.09509, acc:97.1383\n",
-      "epoch: 2, loss:0.07519, acc:97.725\n",
-      "epoch: 3, loss:0.06297, acc:98.0833\n",
-      "epoch: 4, loss:0.05406, acc:98.342\n",
-      "epoch: 5, loss:0.04793, acc:98.5217\n",
-      "epoch: 6, loss:0.04288, acc:98.6724\n",
-      "epoch: 7, loss:0.03896, acc:98.7867\n",
-      "epoch: 8, loss:0.03577, acc:98.8802\n",
-      "epoch: 9, loss:0.03309, acc:98.9628\n",
+      "epoch: 0, loss:0.133, acc:96.0633\n",
+      "epoch: 1, loss:0.08993, acc:97.3242\n",
+      "epoch: 2, loss:0.0704, acc:97.9078\n",
+      "epoch: 3, loss:0.05839, acc:98.2608\n",
+      "epoch: 4, loss:0.05035, acc:98.4937\n",
+      "epoch: 5, loss:0.04433, acc:98.6617\n",
+      "epoch: 6, loss:0.03977, acc:98.7957\n",
+      "epoch: 7, loss:0.03609, acc:98.9035\n",
+      "epoch: 8, loss:0.03314, acc:98.9909\n",
+      "epoch: 9, loss:0.03068, acc:99.0638\n",
       "complete\n",
-      "58.20956897735596\n"
+      "58.9817681312561\n"
      ]
     }
    ],
@@ -278,40 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/device:GPU:0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(tf.test.gpu_device_name())"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.test.is_built_with_cuda()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -323,9 +300,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf2_py36",
+   "display_name": "tf2_basic",
    "language": "python",
-   "name": "tf2"
+   "name": "tf_basic"
   },
   "language_info": {
    "codemirror_mode": {
