--- a/GAN/dcgan/DCGAN.ipynb
+++ b/GAN/dcgan/DCGAN.ipynb
@@ -41,6 +41,7 @@
     "from tensorflow.keras.models import Model \n",
     "from tensorflow.keras.layers import Conv2D, Conv2DTranspose, Dense\n",
     "from tensorflow.keras.layers import BatchNormalization, Reshape, UpSampling2D, MaxPool2D, Flatten\n",
+    "from tensorflow.losses import sigmoid_cross_entropy\n",
     "import numpy as np \n",
     "\n",
     "import tqdm"
@@ -85,6 +86,13 @@
     "        x = self.up2(x)        \n",
     "        x = self.conv2(x)        \n",
     "        return x "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "generator 생성, 동작 테스트 "
    ]
   },
   {
@@ -150,6 +158,13 @@
     "        x = self.dense1(x)\n",
     "        x = self.dense2(x)\n",
     "        return x "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "discrimator 생성, 동작 테스트 "
    ]
   },
   {
@@ -252,9 +267,15 @@
     "x_train = train_imgs.astype('float32') / 255.0 \n",
     "x_train = x_train.reshape((x_train.shape[0],) + (28, 28, 1)) \n",
     "print(x_train.shape) \n",
-    "# Init network \n",
     "\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices(x_train).shuffle(buffer_size).batch(batch_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "loss functions"
    ]
   },
   {
@@ -291,27 +312,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.losses import sigmoid_cross_entropy\n",
-    "\n",
     "@tf.function\n",
     "def train_step(imgs, noise):\n",
     "    total_d_loss = 0.0 \n",
     "    total_a_loss = 0.0 \n",
     "    \n",
-    "\n",
-    "\n",
     "    with tf.GradientTape() as gen_tape, tf.GradientTape() as dis_tape:\n",
+    "        \n",
     "        gen_imgs = g(noise)\n",
+    "        # genearator를 통해서 fake 이미지 생성 \n",
+    "        \n",
     "        real_output = d(imgs)\n",
+    "        # discrimator를 통해서 이미지에 대한 진짜, 가짜 여부 판별 \n",
+    "        \n",
     "        gen_output = d(gen_imgs)\n",
+    "        # 생성된 이미지에 대한 진짜, 가짜 여부 판별 \n",
+    "        \n",
     "        gen_loss = generator_loss(gen_output)\n",
+    "        # generator loss \n",
+    "        \n",
     "        dis_loss= discriminator_loss(real_output, gen_output)\n",
+    "        # discriminator loss \n",
     "\n",
     "    grd_gen = gen_tape.gradient(gen_loss, g.variables)\n",
     "    grd_dis = dis_tape.gradient(dis_loss, d.variables)\n",
+    "    # gradient 생성 \n",
     "\n",
     "    gen_opt.apply_gradients(zip(grd_gen, g.variables))\n",
-    "    dis_opt.apply_gradients(zip(grd_dis, d.variables))"
+    "    dis_opt.apply_gradients(zip(grd_dis, d.variables))\n",
+    "    # bp 수행 "
    ]
   },
   {
