코드 일부 수정
코드 수정

--- a/SL/CNN/mnist/mnist-with-batchnormalize-eager-class-tf2_basic.ipynb
+++ b/SL/CNN/mnist/mnist-with-batchnormalize-eager-class-tf2_basic.ipynb
@@ -44,7 +44,7 @@
     "from tensorflow.keras.layers import Conv2D \n",
     "from tensorflow.keras.layers import BatchNormalization, Flatten, Dense\n",
     "import numpy as np\n",
-    "# tf.enable_eager_execution()\n",
+    "tf.enable_eager_execution()\n",
     "print(tf.__version__)"
    ]
   },
@@ -253,18 +253,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0, loss:0.133, acc:96.0633\n",
-      "epoch: 1, loss:0.08993, acc:97.3242\n",
-      "epoch: 2, loss:0.0704, acc:97.9078\n",
-      "epoch: 3, loss:0.05839, acc:98.2608\n",
-      "epoch: 4, loss:0.05035, acc:98.4937\n",
-      "epoch: 5, loss:0.04433, acc:98.6617\n",
-      "epoch: 6, loss:0.03977, acc:98.7957\n",
-      "epoch: 7, loss:0.03609, acc:98.9035\n",
-      "epoch: 8, loss:0.03314, acc:98.9909\n",
-      "epoch: 9, loss:0.03068, acc:99.0638\n",
+      "epoch: 0, loss:0.139, acc:95.8717\n",
+      "epoch: 1, loss:0.09557, acc:97.1358\n",
+      "epoch: 2, loss:0.07607, acc:97.7094\n",
+      "epoch: 3, loss:0.0639, acc:98.0679\n",
+      "epoch: 4, loss:0.05521, acc:98.3273\n",
+      "epoch: 5, loss:0.0487, acc:98.5194\n",
+      "epoch: 6, loss:0.04354, acc:98.6729\n",
+      "epoch: 7, loss:0.03963, acc:98.7848\n",
+      "epoch: 8, loss:0.03643, acc:98.8785\n",
+      "epoch: 9, loss:0.03363, acc:98.9617\n",
       "complete\n",
-      "58.9817681312561\n"
+      "48.52660250663757\n"
      ]
     }
    ],
@@ -300,9 +300,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf2_basic",
+   "display_name": "tf2_py36",
    "language": "python",
-   "name": "tf_basic"
+   "name": "tf2"
   },
   "language_info": {
    "codemirror_mode": {
