일부 파일삭제
mnist-eager.ipynb 파일삭제

--- a/SL/CNN/mnist/mnist-with-batchnormalize-eager-class-tf2_basic.ipynb
+++ b/SL/CNN/mnist/mnist-with-batchnormalize-eager-class-tf2_basic.ipynb
@@ -44,8 +44,20 @@
     "from tensorflow.keras.layers import Conv2D \n",
     "from tensorflow.keras.layers import BatchNormalization, Flatten, Dense\n",
     "import numpy as np\n",
-    "tf.enable_eager_execution()\n",
+    "# tf.enable_eager_execution()\n",
     "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import os\n",
+    "# os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\"\n",
+    "# print(tf.__version__)"
    ]
   },
   {
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -181,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,12 +237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#device = '/cpu:0' if tf.num_gpus() == 0 else '/gpu:0'\n",
-    "#print('using device %s' %device)\n",
+    "# device = '/cpu:0' if tf.num_gpus() == 0 else '/gpu:0'\n",
+    "# print('using device %s' %device)\n",
     "\n",
     "def train(epochs=100):\n",
     "    loss_history = []\n",
@@ -246,25 +258,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0, loss:0.139, acc:95.8717\n",
-      "epoch: 1, loss:0.09557, acc:97.1358\n",
-      "epoch: 2, loss:0.07607, acc:97.7094\n",
-      "epoch: 3, loss:0.0639, acc:98.0679\n",
-      "epoch: 4, loss:0.05521, acc:98.3273\n",
-      "epoch: 5, loss:0.0487, acc:98.5194\n",
-      "epoch: 6, loss:0.04354, acc:98.6729\n",
-      "epoch: 7, loss:0.03963, acc:98.7848\n",
-      "epoch: 8, loss:0.03643, acc:98.8785\n",
-      "epoch: 9, loss:0.03363, acc:98.9617\n",
+      "epoch: 0, loss:0.1388, acc:95.9333\n",
+      "epoch: 1, loss:0.09394, acc:97.2258\n",
+      "epoch: 2, loss:0.07359, acc:97.8094\n",
+      "epoch: 3, loss:0.06095, acc:98.1779\n",
+      "epoch: 4, loss:0.05256, acc:98.4093\n",
+      "epoch: 5, loss:0.04605, acc:98.5989\n",
+      "epoch: 6, loss:0.04143, acc:98.7298\n",
+      "epoch: 7, loss:0.03751, acc:98.8481\n",
+      "epoch: 8, loss:0.03446, acc:98.9378\n",
+      "epoch: 9, loss:0.03178, acc:99.0175\n",
       "complete\n",
-      "48.52660250663757\n"
+      "remain time:64.95660877227783\n"
      ]
     }
    ],
@@ -273,7 +285,7 @@
     "start = time.time()\n",
     "train(10)\n",
     "end = time.time()\n",
-    "print(end - start)"
+    "print(f\"remain time:{end - start}\")"
    ]
   },
   {
@@ -300,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf2_py36",
+   "display_name": "tf2",
    "language": "python",
    "name": "tf2"
   },
